# storyscript

./: CMakeLists.txt  README.md
include/: Lexer.hpp  UTF8Character.hpp  UTF8IStream.hpp
include/Tests/: UnitTest_Lexer.hpp  UnitTests.hpp
include/Tokens/: EndOfFileToken.hpp  ErrorToken.hpp  IdentifierToken.hpp  IntegerToken.hpp  MiscGroup.hpp  PrimitiveGroup.hpp  SyntaxGroup.hpp  Token.hpp  TokenGroup.hpp
src/: CMakeLists.txt  Lexer.cpp  UTF8Character.cpp  UTF8IStream.cpp  main.cpp
src/Tests/: UnitTests.cpp
src/Tokens/: EndOfFileToken.cpp  ErrorToken.cpp  IdentifierToken.cpp  IntegerToken.cpp  Token.cpp
